introduction and S-2 reworkwd

--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -11,8 +11,8 @@
 \usepackage{tikz}
 \usepackage{xifthen}
 %\pgfplotsset{compat=1.15}
-\usepackage[markup=underline]{changes}
-%\usepackage[final]{changes}
+%\usepackage[markup=underline]{changes}
+\usepackage[final]{changes}
 \definechangesauthor{dal}
 \definechangesauthor{gen}
 
@@ -129,25 +129,26 @@ approximations on the scientific outcomes of the simulation.
 \maketitle
 
 \section{Introduction}
-
-% Since the days of their foundations, disciplines like Computational Physics or Quantum Chemistry always had to deal with the problem of the
-% computational reliability of the results. More specifically, a computational result may be considered reliable for various reasons.
-% For example, it may be in agreement with some previous observation or measurement that the employed computational model is susceptible to reproduce.
-% The model itself may in this way be classified as ``accurate''; it can then be employed to extract, \textit{in silico},
-% other quantities that might be then used to \emph{predict} or \emph{interpret} experiments.
-% Another concept of reliability is the concept of  ``precision'', which is more focused to the actual results
-% that a given computational model provides for a specific set of quantities, regardless of their potential agreement with
-% experimental data. The aim of precise computational approach is to reduce the \emph{computational} uncertainties
-% of quantities extracted out of a well-defined model, and provide reference results, to which other computer codes
-% employing the same model can be compared.
-% 
-% A recent, remarkable example of precision-driven initiative is provided by the DeltaCodes project~\cite{deltaTest2016},
-% where a grassroot community of code-owners struggled to extract well-defined computational results in the context of
-% Density Functional Theory (DFT) calculations. Ground-State quantum mechanical quantities as lattice constants and bulk modulus of
-% elementary crystals extracted from different codes were compared with each other, with the objective of reducing the uncertainties
-% on such data, and in some sense, to define a \emph{calibration} procedure for a Solid-State Physics DFT code.
-% Any other code able to extract the same quantities with the same approximations may be compared with the
-% results of the community in order to assess its computational reliability.
+\deleted[id=gen]{%
+Since the days of their foundations, disciplines like Computational Physics or Quantum Chemistry always had to deal with the problem of the
+computational reliability of the results. More specifically, a computational result may be considered reliable for various reasons.
+For example, it may be in agreement with some previous observation or measurement that the employed computational model is susceptible to reproduce.
+The model itself may in this way be classified as ``accurate''; it can then be employed to extract, \textit{in silico},
+other quantities that might be then used to \emph{predict} or \emph{interpret} experiments.
+Another concept of reliability is the concept of  ``precision'', which is more focused to the actual results
+that a given computational model provides for a specific set of quantities, regardless of their potential agreement with
+experimental data. The aim of precise computational approach is to reduce the \emph{computational} uncertainties
+of quantities extracted out of a well-defined model, and provide reference results, to which other computer codes
+employing the same model can be compared.
+%
+A recent, remarkable example of precision-driven initiative is provided by the DeltaCodes project~\cite{deltaTest2016},
+where a grassroot community of code-owners struggled to extract well-defined computational results in the context of
+Density Functional Theory (DFT) calculations. Ground-State quantum mechanical quantities as lattice constants and bulk modulus of
+elementary crystals extracted from different codes were compared with each other, with the objective of reducing the uncertainties
+on such data, and in some sense, to define a \emph{calibration} procedure for a Solid-State Physics DFT code.
+Any other code able to extract the same quantities with the same approximations may be compared with the
+results of the community in order to assess its computational reliability.
+}
 
 For a theoretical approach that is based on numerical calculations, for which no analytic reference solution exists,
 reducing the computational uncertainty is the only possible way to shed light on the predictivity power of the
@@ -172,10 +173,24 @@ and quantify their computational uncertainty.
 In this paper, we focus our attention to Linear-Response treatments of \emph{molecular} systems,
 in particular referring to LR-TDDFT calculation. We will investigate the impact that
 \emph{open} (i.e. Isolated) Boundary Conditions (BC) that have to be imposed to the system will have on the computational evaluation of LR quantities.
-We perform analytic considerations on the equations beyond LR treatment and discuss the interplay between reproducible LR quantities and the \emph{locality} of the related objects. Such considerations will enable us to distinguish quantities that \textit{a priori} can be compared among different treatments - and therefore tested for reproducibility - from others that would \emph{explicitly} depend of the employed computational treatment.
+\deleted[id=gen]{In order to do this}We perform analytic considerations on the equations beyond LR treatment and discuss the interplay between reproducible LR quantities and the \emph{locality} of the related objects. Such considerations will enable us to distinguish quantities that \textit{a priori} can be compared among different treatments - and therefore tested for reproducibility - from others that would \emph{explicitly} depend of the employed computational treatment.
 
-This analysis evidences that the description of molecular systems beyond the ground state unavoidably leads to the inclusion of delocalized degrees of freedom above a specific energetic threshold. Moreover on the basis of this analysis we can assess something about the reliability of the results provided by computational setups able to explicit include the presence of delocalized degrees of freedom compared
-to the ones in which these degrees of freedom are excluded by design.
+It is indeed relatively easy to have converged indicators for numerical Ground State (GS) quantities: on one side, the variational theorem
+guarantees that the lower the GS energy, the more precise the numerical result;
+on the other side, GS quantities of molecular system  can be expressed
+only in terms of localized (i.e. bound) states. Such considerations make relatively easy the increasing  of the basis set completeness in view of the extraction of reference results.
+
+We will see in what follows that the situation is not as simple in the context of LR.
+Here we will show that the response density -- even for molecular systems -- looses its localized behaviour for high frequencies,
+independently on the nature of the system and of the perturbation.
+Furthermore, we will demonstrate that to increase basis set completeness, delocalized oscillatory degrees of freedom cannot be
+excluded \textit{a priori}, even in the localized regime.
+
+We will also see that the reliabilty of the convergence criteria that can be established for LR -- where no variational theorem exists -- depends explictily on the target frequency range and on the features of the numberical basis set employed.
+
+% This analysis evidences that the description of molecular systems beyond the ground state unavoidably leads to the inclusion of delocalized
+% degrees of freedom above a specific energetic threshold. Moreover on the basis of this analysis we can assess something about the reliability of the results provided by computational setups able to explicit include the presence of delocalized degrees of freedom compared
+% to the ones in which these degrees of freedom are excluded by design.
 
 The paper is organized as follows.
 Initially we will inspect how the question of reproducibility may be expressed
@@ -196,11 +211,11 @@ approaches, in the context of Quasi-Particle equations.
 \subsection{Long range behavior of the eigenvalue solution of the Schr\"odinger equation}
 \label{SEopenSystem}
 
-% {Let us start our discussion by revisiting the
-% impact that the Isolated BC have on the solutions of the time-independent Schr\"odinger Equation. We here present well-known concepts of
-% quantum mechanics, under a perspective that will turn out to be very useful in the forthcoming considerations about linear-response quantities.}
-Let us start our discussion by reviewing some well-known concepts of quantum mechanic under a perspective that
-will turn out to be very useful in the forthcoming considerations about linear-response quantities. In particular we revisit the impact that the Isolated BC have on the solutions of the Schr\"odinger Equation.
+\replaced[id=dal]{Let us start our discussion by reviewing some well-known concepts of quantum mechanic under a perspective that
+will turn out to be very useful in the forthcoming considerations about linear-response quantities. In particular we revisit the impact
+that the Isolated BC have on the solutions of the Schr\"odinger Equation.}{Let us start our discussion by revisiting the
+impact that the Isolated BC have on the solutions of the time-independent Schr\"odinger Equation. We here present well-known concepts of
+quantum mechanics, under a perspective that will turn out to be very useful in the forthcoming considerations about linear-response quantities.}
 
 Consider a (one-body) wavefunction $\ket{\psi}$ solution of the equation
 $\op H\ket{\psi}=\eps\ket{\psi}$, where we split the Hamiltonian operator into the sum of
@@ -247,8 +262,9 @@ Being discrete and well-identified, the bound-state energies are a property of t
 quantities. The values of their energies can be compared among different treatments and it is in principle possible to
 provide reference results on them.
 
+
 On the other hand, positive energy solutions behave differently.
-Even though the potential is localized the associated Helmholtz kernel is a spherical wave and its convolution with the source term provides a delocalized wavefunction $\psi(\r)$ in the whole space.
+Even though the potential is localized \replaced[id=dal]{the associated Helmholtz kernel is a spherical wave and its}{, their positive energy are spherical waves and the} convolution with the source term provides a delocalized wavefunction $\psi(\r)$ in the whole space.
 As they cannot be normalized they belong to the essential spectrum of the Hamiltonian operator and form a \emph{continuum} of states.
 Outside of the support of the $\ket{\op V \psi}$ the solutions of Eq.~\eqref{SEHelmholtz1} can be put in bijection with the eigenstates of the
 free-particle Hamiltonian $\op H_s$. For positive energies, the quantum numbers of the eigenstates are determined by the Laplacian operator,
@@ -321,7 +337,9 @@ response density parametrized as
 \ee
 Here we have introduced the set of $\omega$-dependent \emph{fluctuation states} (FS)
 $\ket{f_p^\Phi(\omega)} = \dm'_\Phi(\omega) \ket{\psi_p}$, that have values in the unoccupied subspace of $\hnot$.
-However, non-hermiticity of $\dm'_\Phi(\omega)$ implies that the fluctuation states are complex quantities.
+\added[id=gen]{
+However, non-hermiticity of $\dm'_\Phi(\omega)$ implies that the
+fluctuation states are complex quantities.}
 %  Causality implies that the real and imaginary part of FS are related each other by the Kramers-Kronig relations}
 % \be\lb{KKrel}
 % \mathrm{Re}\left( \ket{f_p^\Phi(\omega)} \right) =
@@ -347,17 +365,20 @@ $
 \ket{s_p^\Phi(\omega)} = \op Q_0(\op \Phi(\omega) +\op V'[\dm'_\Phi](\omega) )\ket{\psi_p}
 $ as a source term.
 
-Equation \eqref{rhoPrimeFluctuationStateDef2} is the convenient starting point to assess the localization properties of the FS as it is easy to see that, for each choice of $p$, the value $\omega = |\eps_p|$ represents the threshold level that governs the asymptotic behavior of the associated Helmholtz kernel.
-As a ulterior \emph{stringent} hypothesis, let us now assume that the source term $\ket{s_p^\Phi(\omega)}$ is spatially localized, \textit{i.e.} its evaluation can be restricted on a bounded real-space domain.
+\replaced[id=dal]{Equation \eqref{rhoPrimeFluctuationStateDef2} is the convenient starting point to assess the localization properties of the FS as it is easy to see that, for each choice of $p$, the value $\omega = |\eps_p|$ represents the threshold level that governs the asymptotic behavior of the associated Helmholtz kernel.}{It can be seen that for each choice of $p$, the value $\omega = |\eps_p|$ represents the threshold level
+that governs the localization properties of the FS.}
+As a ulterior \emph{stringent} hypothesis, let us now assume that the source term $\ket{s_p^\Phi(\omega)}$ is \added[id=dal]{spatially} localized, \textit{i.e.} its evaluation can be restricted on a bounded real-space domain.
 Even when such locality argument holds true, for $\omega > |\eps_p|$,
 the Helmholtz kernel behaves as a spherical wave and  gives raise to a $\ket{f^\Phi_p(\omega)}$ which is \emph{delocalized} in the entire real-space domain.
 Such delocalization is an intrinsic consequence of the value of $\omega$, and does not depend on the particular choice of
 $\op \Phi$.
 Only for $\omega < |\eps_p|$ the kernel contains an exponential damping factor and $\ket{f^\Phi_p(\omega)}$ exhibits a bound-state behavior in the long range,
 once again provided that the above locality arguments on $\ket{s_p^\Phi(\omega)}$ -- hence on $\op V'$ and $\Phi$ -- are valid.
-These arguments demonstrate that for frequencies above the IP threshold energy, the
+\added[id=gen]{These arguments demonstate that for frequencies above the IP threshold energy, the
 response density operator cannot be expressed in terms of localized states. Locality of
-FS (and therefore of $\dm'_\Phi(\omega)$) can be only recovered for frequencies below such threshold.
+FS (and therefore of $\dm'_\Phi(\omega)$) can be only recovered for frequencies below such threshold.}
+
+\deleted[id=dal]{Added a subsection for static perturbations}
 
 \subsection{Localized behavior for static perturbations}
 The locality property of the fluctuation state can be directly confirmed for static perturbations at $\omega=0$.
@@ -398,7 +419,9 @@ the size of the computational domain used to express the fluctuation states. The
 one of the static dipole of the molecule computed at zero external field.
 The results evidence that the typical sizes of $\ket{f^\Phi_p(0)}$ are analogous to the ones of the unperturbed KS orbitals, which is a direct proof of the bound-state behaviour of the FS.
 
-\subsection{Localization properties at finite $\omega$. Emergence of a strong and a weak regime}
+\deleted[id=dal]{Modified the name of the subsection}
+
+\subsection{Localization propeties at finite $\omega$. Emergence of a strong and a weak regime}
 
 %\subsection{Strong and weak convergence at finite $\omega$}
 
@@ -406,16 +429,17 @@ The analysis described above has shown that the building blocks of the response 
 are susceptible to exhibit bound-state long-range behavior \emph{only} when $\omega < |\eps_p|$,
 while they behave as unbound states for values of $\omega$ above the threshold levels.
 This fact has interesting implications in the evaluation of LR quantities. Indeed, writing the response
-density in terms of FS implies that
-% \begin{align}\lb{LinearResponseFunctDef2}
-% \braket{\delta\op O}_\Phi(\omega) = &\sum_p \left( \bra{f_p^\Phi(-\omega)}\op O\ket{\psi_p}+ \bra{\psi_p}\op O\ket{f_p^\Phi(\omega)}\right) \nn \\
-% = &2 \sum_p\bra{\psi_p}\op O\ket{f_p^\Phi(\omega)}  \;,
-% \end{align}
-\be\lb{LinearResponseFunctDef2}
-\braket{\delta\op O}_\Phi(\omega) = 2 \sum_p \bra{\psi_p}\op O\ket{f_p^\Phi(\omega)} \;,
-\ee
-where we have assumed that $\op O$ is a real symmetric operator and chosen a real set of occupied molecular states.
-Let us suppose that also the observable of interest $\op O$ may be restricted to localized domains in the same way as the potentials $ \op V$ and $\op \Phi$. Once again, it would be enough to consider a local operator for this condition to be met.
+density in terms of FS implies that \deleted[id=dal]{(equation for the response density modified)}
+% \be\lb{LinearResponseFunctDef2}
+% \braket{\delta\op O}_\Phi(\omega) = 2 \mathrm{Re} \left(\sum_p \bra{\psi_p}\op O\ket{f_p^\Phi(\omega)}\right) \;.
+% \ee
+\begin{multline}\lb{LinearResponseFunctDef2}
+\braket{\delta\op O}(\omega) = \sum_p \left( \bra{f_p^\Phi(-\omega)}\op O\ket{\psi_p}+ \bra{\psi_p}\op O\ket{f_p^\Phi(\omega)}\right) \\
+=2 \sum_p\bra{\psi_p}\op O\ket{f_p^\Phi(\omega)}  \;.
+\end{multline}
+In the second equality we have assumed that $\op O$ is a real symmetric operator and chosen a real set of occupied molecular states.
+Let us suppose that also the observable of interest $\op O$ \replaced[id=gen]{may be restricted to localized domains in the same way as the potentials $ \op V$ and $\op \Phi$.}{exhibits the locality properties introduced for the potentials $ \op V$, $\op \Phi$ and $\op V'$.}
+Once again, it would be enough to consider a local operator for this condition to be met.
 
 Two
 distinct regimes can be identified, on the basis of value of $\omega$.
@@ -439,10 +463,10 @@ In this case a computational description of fluctuation states is only meaningfu
 where the bound state character of $\{\bra{\psi_p}\op O\}$ behaves as a regulator.
 This is naturally achieved in the above mentioned Krylov space treatments, which
 explicitly deal with the expression of the scalar products.
-However, in this regime, imposing \emph{by design} a localized
+\added[id=gen]{However, in this regime, imposing \emph{by design} a localized
 behaviour of the FS might reveal very dangerous in view of convergence of the results:
 the computational basis set have to be able to express in the support domain of $\{\bra{\psi_p}\op O\}$ a asymptotically delocalized FS. The degrees of completeness
-of the computational basis should therefore be increased by imposing oscillatory degrees of freedom needed to represent the FS at the border of the simulation domain: it is important that the underlying basis set is able to express delocalised states
+of the computational basis should therefore be increased by imposing oscillatory degrees of freedom needed to represent the FS at the border of the simulation domain: it is important that the underlying basis set is able to express delocalised states.}
 
 These considerations prove why, when a given computer code employs established GS numerical techniques,
 \emph{it is much easier to converge LR quantities for $\omega$ below IP}.
@@ -455,11 +479,11 @@ The IP threshold has an evident physical interpretation: for energies in a range
 localized and delocalized states might be coupled by the perturbation. Obtaining convergence of the observable quantities at these energies is therefore much more challenging if one employs
 numerical techniques which were originally tailored for GS calculations.
 
-As an example in support of these arguments we compare the dynamical polarizability $\alpha(\omega)$ of a $CO$ molecule computed in three distinct real-space computational setups, which differs for the dimension of the computational domain.
-Results reported in the two panels of figure \ref{co_spectrum} show the real and imaginary part of $\alpha(\omega)$, respectively. In all the cases a typical behavior emerges: the curves are almost coincident in the below threshold regime,
+As an example in support of these arguments we compare the \replaced[id=dal]{dynamical polarizability $\alpha(\omega)$}{absorption spectrum} of a $CO$ molecule computed in three distinct real-space computational setups, which differs for the dimension of the computational domain.
+Results reported in \replaced[id=dal]{the two panels of figure \ref{co_spectrum} show the real and imaginary part of $\alpha(\omega)$, respectively. In all the cases a typical behavior emerges}{evidences a typical behavior}: the curves are almost coincident in the below threshold regime,
 whereas the effect of the computational setup are clearly visible for values of  $\omega$ that exceed the threshold value.
-For these high-frequency regions, convergence might be reached for domains of much larger sizes than what presented here~\cite{baroni2008}, which are -- as already noticed -- more than sufficient below 
-threshold\footnote{Add the convergence domain for the benzene molecule by looking at the results of...}.
+For these high-frequency regions, convergence might be reached for domains of much larger sizes than what presented here~\cite{baroni2008},
+which are -- as already noticed -- more than sufficient below threshold.
 
 \begin{figure}
 \centering
@@ -473,18 +497,25 @@ sizes of the simulation domain. The top panel displays the real part and the bot
 is indicated by a vertical dashed line.}
 \end{figure}
 
+% \begin{figure}
+% \includegraphics[scale=0.6]{Fig2_CO_spectrum.eps}
+% \caption{\label{co_spectrum}(Color online) Illustrative LR absorption spectra of the $CO$ molecule in computational setups with different sizes of the simulation domain.
+% The value of the IP threshold is indicated by a vertical dashed line.}
+% \end{figure}
+
 \section{Excitation operators. The analytic structure of the susceptibility functional}
 
-It is possible to reformulate this type of analysis by directly looking at LR quantities that are defined independently from the perturbing operators and target observables. This can be achieved by studying the
-\emph{susceptibility functional}, defined implicitly trough the operator equation
-% In view of reproducibility, the scalar product of Eq.~\eqref{LinearResponseFunctDef1}, defining the observable fluctuation, may be compared among various numerical treatments.
-% However, even though directly related to experimental results, such quantity is not by itself a property of the molecule, as it is a function of $\omega$ that explicitly depends
-% on the perturbation operator $\op \Phi$, not to mention the target observable $\op O$. Alternatively, we may consider only the fluctuation state, but it is still a $\op \Phi$-dependent wavefunction,
-% with a potential local behavior only for $\omega$ below the ionization threshold. Hence, comparing fluctuation states among diverse numerical treatments would be a
-% challenging task.
-% It is therefore much more interesting to concentrate on LR quantities that are defined independently from 
-% the perturbing operators and target observables. This can be achieved by studying the \emph{susceptibility
-%functional}, defined implicitly trough the operator equation
+\added[id=dal]{It is possible to reformulate this type of analysis by directly looking at LR quantities that are defined independently from the perturbing operators and target observables. This can be achieved by studying the
+\emph{susceptibility functional}, defined implicitly trough the operator equation}
+\deleted[id=dal]{
+In view of reproducibility, the scalar product of Eq.~\eqref{LinearResponseFunctDef1}, defining the observable fluctuation, may be compared among various numerical treatments.
+However, even though directly related to experimental results, such quantity is not by itself a property of the molecule, as it is a function of $\omega$ that explicitly depends
+on the perturbation operator $\op \Phi$, not to mention the target observable $\op O$. Alternatively, we may consider only the fluctuation state, but it is still a $\op \Phi$-dependent wavefunction,
+with a potential local behavior only for $\omega$ below the ionization threshold. Hence, comparing fluctuation states among diverse numerical treatments would be a
+challenging task.}
+\deleted[id=dal]{It is therefore much more interesting to concentrate on LR quantities that are defined independently from the perturbing operators and target observables.
+This can be achieved by studying the
+\emph{susceptibility functional}, defined implicitly trough the operator equation}
 \be\lb{SusceptibilityDef1}
 \dm'(\omega) = \left(\omega -\mathcal L \right)^{-1} \commutator{\op \Phi(\omega)}{\dmnot} = \sop{{\cal \chi}}(\omega) \op\Phi(\omega) \;.
 \ee
@@ -498,8 +529,8 @@ together with the operator orthonormalization condition %$\trace{\op{\tilde E}\o
 \be\lb{orthoExcitatioOpDef1}
 \trace{\op{\tilde E}_a\op E_b} = \delta_{ab} \;.
 \ee
-Excitations defined in that way represent an operator basis that satisfy the transverse condition as in
-Eq.~\eqref{RhopTransverseDef1} (see appendix \ref{LiouvillianAction}), and enable us to express the susceptibility as a spectral decomposition:
+Excitations defined in that way may be considered as a basis of the operators that satisfy the transverse condition as in
+Eq.~\eqref{RhopTransverseDef1}, and enable us to express the susceptibility as a spectral decomposition:
 \be\lb{RhopExcitationDef1}
 \sop{{\cal \chi}}(\omega) \cdot   = \sum_{\{a\}} \op E_{a} \,
 \frac{\trace{\commutator{\op{\tilde E}_a}{\dmnot}\cdot}}{\omega-\Omega_a} \;.
@@ -867,6 +898,15 @@ of $\chi(\omega)$ to only localized, discrete, \emph{code-independent} excitatio
 % 2 \bra{\psi_p} \op O \fscd{D,C}\;.
 % \ee
 
+\subsection{Effective representation of $\sop \chi(\omega)$ for localized response densities}
+The above arguments have shown that the only quantity which can be expressed in terms
+of the localized sector of the excitation spectrum is the imaginary part of the
+susceptibility functional $\sop \chi(\omega)$ in the optical regime (i.e. $\omega <$  IP).
+The response densitites for a generic perturbation and $\omega$ value always require the
+inclusion in the Liouvillian DOS of the delocalized part of the excitation spectrum, even in view of expressing localized fluctuation states.
+
+It appears therefore important to identify indicators that might assess the capability of
+$\sop \chi(\omega)$ to express localised FS (and thus the complete response density $\dm'_\Phi(\omega)$) below the IP threshold.
 For instance, the static polarizability tensor $\alpha_{ij}$ can be calculated as
 \be\lb{sminus2}
 \alpha_{ij} = \sint \dd a \frac{w^a_{ij}}{\Omega_a^2}\,, \quad w^a_{ij} \equiv \sum_{p\in a} \bra{\psi_p} \op {\mathbf r}_i \ket{w_p^a}\bra{\psi_p} \op {\mathbf r}_j \ket{w_p^a}\;.
@@ -878,7 +918,11 @@ Such value can be straightforwardly compared with results of Eq.~\eqref{statical
 described in Sec.~\ref{FluctuationState}.
 This is the well-know $S_{-2}$ sum-rule (see e.g.\cite{Wagner2012}), that express the value of the static polarizability
 in terms of the molecule's oscillator strengths.
+In the context of a numerical evaluation of the excitations, such sum rule can therefore interpreted as the capability of the pseudo-continuum sector of the excitation to
+express the localized FS -- and consequently the reference value of $\alpha_{ij}$ -- at $\omega=0$.
 
+We have analized the fullfillment of Eq.~\eqref{sminus2} for moeculs of various
+sizes and symmetries.
 In Fig.~\ref{co_AlphaExc} we show explicitly such a comparison in the case of the $CO$ molecule.
 We notice that a considerable number of pseudo-continuum excitations is required
 to find the correct result; the sector of the discrete excitations, even though
@@ -894,18 +938,21 @@ horizontal red dashed line. The value of the IP energy is indicated by a vertica
 oscillator strengths $w^a_{zz}$ of Eq.~\eqref{sminus2} are also plotted. }
 \end{figure}
 
-\subsection{Generality of the considerations: varying the size and the symmetry of the molecule}
+Present the table of the other results.
 
-
+Such a scenario can be also found in the other molecules we have considered;
+varying the molecule size and symmetry seems not to modify the qualitative behaviour of the excitation landscape. In addition the
+localized sector of the excitations alone is largely insufficient to express $\alpha_{ij}$.
 Such considerations are independent on the number of atoms of the molecule, as the range in $\omega$ needed to
 achieve satisfactory agreement is largely above the last valence ionization threshold, which is
 a intensive quantity.
-In addition, we can see that the $S_{-2}$ sum-rule \emph{cannot} be used to assess
-the correctness of $\chi(\omega)$ for values of $\omega$ above IP; it is enough to recall
-the strong dependency on the box size of the absorption spectra of Fig.~\ref{CO_exc}.
-For all these computational setups, the $S_{-2}$ sum rule is, on the contrary, perfectly satisfied.
 
-Here we may put other examples
+Once again, this proves that, for any numerical treatment,  pseudo-continuum excitations are fundamental in view of a correct expression
+of the response density below IP.
+However, the fulfillement of $S_{-2}$ is not a universal quality indicator of $\chi(\omega)$ as the latter may be still badly represented in the high frequency regime:
+it is enough to recall
+the strong dependency on the box size of the absorption spectra of Fig.~\ref{CO_exc}.
+For all these computational setups, the $S_{-2}$ sum rule is, on the contrary, well satisfied.
 
 
 \section{Conclusions and Perspectives}
@@ -988,7 +1035,7 @@ the linear susceptibility below IP -- more specifically the real part of the flu
 % Liouvillian superoperator of Eq.~\eqref{LiouZeroDef1}, needed to
 % express the spectral representation of the linear susceptibility.
 
-Our result show that \emph{both} the sectors of the excitations energies have to be considered in view of the extraction of computationally reliable quantities, and this even below the first IP.
+Our results show that \emph{both} the sectors of the excitations energies have to be considered in view of the extraction of computationally reliable quantities, and this even below the first IP.
 For generic LR quantities, which are functionals of the linear susceptibility,
 the quality of the $\chi(\omega)$ (super)operator will depend
 on the frequency $\omega$ of interest: a given spectral representation may provide high-quality results for static $\omega=0$ regimes, while being
@@ -997,6 +1044,9 @@ unable to provide convergence for high-energy absorption spectra.
 Absorption spectra below IP are relatively easy to converge, as they are observables which depend only on localized quantities.
 However, the fulfillment of sum rules like the $S_{-2}$ is not \textit{per se}
 a guarantee of the quality of high energy absorption spectra.
+Moreover, if the basis set employed for the evaluation of the target $\alpha_{ij}$ in  Eq.~\eqref{sminus2} is identical to the one employed for the LR treatment the $S_{-2}$
+is trivially satisfied in the basis. It is therefore important to have a set of reference values
+in the complete basis set limit.
 
 We believe that these considerations, based on simple manipulations on the fundamental LR equations, will help in increase
 the reliability of LR calculations in the community, and in building test-sets that would help in
